# Lab_11_CHAT

./: .gitignore  CMakeLists.txt  Chat.cpp  Chat.h  ChatMessage.cpp  ChatMessage.h  ChatRegister.cpp  ChatRegister.h  Message.cpp  Message.h  User.cpp  User.h  UserManager.cpp  UserManager.h  main.cpp
test/: CMakeLists.txt  ChatFixture.cpp  ChatMessageFixture.cpp  ChatMessageTest.cpp  ChatRegisterFixture.cpp  ChatRegisterTest.cpp  ChatTest.cpp  UserFixture.cpp  UserTest.cpp
